; ModuleID = '/home/carl/AnghaBench/linux/drivers/iio/adc/extr_xilinx-xadc-core.c_xadc_zynq_drain_fifo.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/iio/adc/extr_xilinx-xadc-core.c_xadc_zynq_drain_fifo.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.xadc = type { i32 }

@XADC_ZYNQ_REG_STATUS = common dso_local global i32 0, align 4
@XADC_ZYNQ_STATUS_DFIFOE = common dso_local global i32 0, align 4
@XADC_ZYNQ_REG_DFIFO = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.xadc*)* @xadc_zynq_drain_fifo to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @xadc_zynq_drain_fifo(%struct.xadc* %0) #0 {
  %2 = alloca %struct.xadc*, align 8
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  store %struct.xadc* %0, %struct.xadc** %2, align 8
  %5 = load %struct.xadc*, %struct.xadc** %2, align 8
  %6 = load i32, i32* @XADC_ZYNQ_REG_STATUS, align 4
  %7 = call i32 @xadc_read_reg(%struct.xadc* %5, i32 %6, i32* %3)
  br label %8

8:                                                ; preds = %14, %1
  %9 = load i32, i32* %3, align 4
  %10 = load i32, i32* @XADC_ZYNQ_STATUS_DFIFOE, align 4
  %11 = and i32 %9, %10
  %12 = icmp ne i32 %11, 0
  %13 = xor i1 %12, true
  br i1 %13, label %14, label %21

14:                                               ; preds = %8
  %15 = load %struct.xadc*, %struct.xadc** %2, align 8
  %16 = load i32, i32* @XADC_ZYNQ_REG_DFIFO, align 4
  %17 = call i32 @xadc_read_reg(%struct.xadc* %15, i32 %16, i32* %4)
  %18 = load %struct.xadc*, %struct.xadc** %2, align 8
  %19 = load i32, i32* @XADC_ZYNQ_REG_STATUS, align 4
  %20 = call i32 @xadc_read_reg(%struct.xadc* %18, i32 %19, i32* %3)
  br label %8

21:                                               ; preds = %8
  ret void
}

declare dso_local i32 @xadc_read_reg(%struct.xadc*, i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
